--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -107,7 +107,7 @@
 
                 <div class=" div_line" style="padding:0px 40px 0px 0px;margin:0;float:right">
                     {% if session['username']  %}
-                    <a href="/index/index" style="line-height: 0;font-size: 1.45rem;color:#282828;">{{session['username']}}</a>
+                    <a href="/usercenter" style="line-height: 0;font-size: 1.45rem;color:#282828;">{{session['username']}}</a>
                     {% else %}
                     <a href="/login/gologin" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 陆</a>
                     {% endif %}
