--- a/eds/templates/index/index.html
+++ b/eds/templates/index/index.html
@@ -115,24 +115,24 @@
                       <div class="grid-row">
                         <div class="col-full col-md-12-24" style="margin-bottom:2.4rem">
                           <div class="type-28 mr2 inline-block">专 家</div>
-                          <a href="https://www.kickstarter.com/food-craft?ref=home" class="text-uppercase py1 type-12 inline-flex link-soft-black">View all
-                            <svg class="svg-icon__icon--arrow-right icon-medium ml1" aria-hidden="true">
-                              <use xlink:href="#icon--arrow-right"></use></svg>
-                          </a>
+                          <!--<a href="#" class="text-uppercase py1 type-12 inline-flex link-soft-black">View all-->
+                            <!--<svg class="svg-icon__icon&#45;&#45;arrow-right icon-medium ml1" aria-hidden="true">-->
+                              <!--<use xlink:href="#icon&#45;&#45;arrow-right"></use></svg>-->
+                          <!--</a>-->
                         </div>
                       </div>
                       <div class="grid-row">
                         <div class="col-full col-md-12-24">
                           <section class="section_potd-block">
-                            <header class="text-uppercase type-13 mb2 inline-block w100p">Featured Project</header>
+                            <header class="type-13 mb2 inline-block w100p">最热专家</header>
                             <a class="block relative keyboard-focusable link-soft-black" href="https://www.kickstarter.com/projects/400425204/jacqui-a-simple-handbag-company?ref=home_potd">
-                              <div>
-                                <button class="pill bg-soft-black_50 h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline absolute t2 r2" data-tooltip="Remind Me">
-                                  <svg class="svg-icon__icon--heart-outline icon-medium m-auto fill-white" aria-hidden="false" aria-label="Remind Me">
-                                    <use xlink:href="#icon--heart-outline"></use>
-                                  </svg>
-                                </button>
-                              </div>
+                              <!--<div>-->
+                                <!--<button class="pill bg-soft-black_50 h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline absolute t2 r2" data-tooltip="Remind Me">-->
+                                  <!--<svg class="svg-icon__icon&#45;&#45;heart-outline icon-medium m-auto fill-white" aria-hidden="false" aria-label="Remind Me">-->
+                                    <!--<use xlink:href="#icon&#45;&#45;heart-outline"></use>-->
+                                  <!--</svg>-->
+                                <!--</button>-->
+                              <!--</div>-->
                               <img class="mb1 mb3-lg w100p block" src="/static/images/timg.jpg" alt="Project">
                               <div class="absolute-lg b0 p3-lg mb6 mb0-md">
                                 <div>
@@ -201,7 +201,8 @@
                               </li>
                               {% endfor %}
                             </ul>
-                            <a href="#" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a></div>
+                            <!--<a href="#" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a>-->
+                          </div>
                           {% endfor %}
                           <script>$(function() {
                               $(".item-1:gt(0)").hide(); //选择item类0之后的元素隐藏,为0的这个元素显示
@@ -226,16 +227,16 @@
                       <div class="grid-row">
                         <div class="col-full col-md-12-24" style="margin-bottom:2.4rem">
                           <div class="type-28 mr2 inline-block">高 校</div>
-                          <a href="#" class="text-uppercase py1 type-12 inline-flex link-soft-black">View all
-                            <svg class="svg-icon__icon--arrow-right icon-medium ml1" aria-hidden="true">
-                              <use xlink:href="#icon--arrow-right"></use></svg>
-                          </a>
+                          <!--<a href="#" class="text-uppercase py1 type-12 inline-flex link-soft-black">View all-->
+                            <!--<svg class="svg-icon__icon&#45;&#45;arrow-right icon-medium ml1" aria-hidden="true">-->
+                              <!--<use xlink:href="#icon&#45;&#45;arrow-right"></use></svg>-->
+                          <!--</a>-->
                         </div>
                       </div>
                       <div class="grid-row">
                         <div class="col-full col-md-12-24">
                           <section class="section_potd-block">
-                            <header class="text-uppercase type-13 mb2 inline-block w100p">Featured Project</header>
+                            <header class="type-13 mb2 inline-block w100p">最热高校</header>
                             <a class="block relative keyboard-focusable link-soft-black" href="#">
                               <div>
                                 <button class="pill bg-soft-black_50 h6 w6 ksr-tooltip-no-focus text-nowrap flex p0 keyboard-focusable-transparent z1 no-outline absolute t2 r2" data-tooltip="Remind Me">
@@ -272,8 +273,6 @@
                                 <button class="keyboard-focusable maison-book bg-white hover-bg-white p0 type-13 text-uppercase pb2 mr3 mb0 no-radius hover-dark-grey-500 border-bottom border-soft-black soft-black ">985工程高校</button></li>
                               <li class="inline-block mb-1_6 ct-li-2">
                                 <button class="keyboard-focusable maison-book bg-white hover-bg-white p0 type-13 text-uppercase pb2 mr3 mb0 no-radius hover-dark-grey-500 dark-grey-400 ">211工程高校</button></li>
-                              <li class="inline-block mb-1_6 ct-li-2">
-                                <button class="keyboard-focusable maison-book bg-white hover-bg-white p0 type-13 text-uppercase pb2 mr3 mb0 no-radius hover-dark-grey-500 dark-grey-400 ">海外高校</button></li>
                             </ul>
                           </div>
                           <div class="item-2">
@@ -297,7 +296,8 @@
                               </li>
                               {% endfor %}
                             </ul>
-                            <a href="https://www.kickstarter.com/discover/advanced?section=food-craft&amp;sort=newest&amp;staff_picks=1&amp;state=live&amp;ref=home_new_and_noteworthy" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a></div>
+                            <!--<a href="#" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a>-->
+                          </div>
                           <div class="item-2">
                             <ul class="mb3">
                               {% for school in info_211_dict %}
@@ -319,12 +319,14 @@
                               </li>
                               {% endfor %}
                             </ul>
-                            <a href="https://www.kickstarter.com/discover/advanced?section=food-craft&amp;sort=newest&amp;staff_picks=1&amp;state=live&amp;ref=home_new_and_noteworthy" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a></div>
+                            <!--<a href="#" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a>-->
+                          </div>
                           <div class="item-2">
                             <ul class="mb3">
 
                             </ul>
-                            <a href="https://www.kickstarter.com/discover/advanced?section=food-craft&amp;sort=newest&amp;staff_picks=1&amp;state=live&amp;ref=home_new_and_noteworthy" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a></div>
+                            <!--<a href="#" class="keyboard-focusable text-uppercase py1 px2 type-12 border border-grey-500 hover-border-soft-black inline-block soft-black">View all</a>-->
+                          </div>
                           <script>$(function() {
                               $(".item-2:gt(0)").hide(); //选择item类0之后的元素隐藏,为0的这个元素显示
                               //主要逻辑就在于找到选项卡和内容框相对应的下标
