--- a/eds/templates/main/profile.html
+++ b/eds/templates/main/profile.html
@@ -90,7 +90,7 @@
 
     </div>
 
-    <div class="row" hidden>
+    <div class="row">
     	<div class="col-lg-2 col-md-2 col-sm-12"></div>
     	<div class="col-lg-5 col-md-5 col-sm-12">
     		<ul id="accordion" class="accordion">
