--- a/eds/templates/search/searchreasult.html
+++ b/eds/templates/search/searchreasult.html
@@ -6,12 +6,8 @@
     <title>搜索结果</title>
     <script src="/static/resources/vue/commonTools.js"></script>
     <script src="/static/js/search2.js"></script>
-
-    <!--<link rel="stylesheet" href="./resources/element/index.css">
-
-    <!--<script src="./resources/element/index.js"></script>-->
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="/static/resources/element/index.css">
+    <script src="/static/resources/element/index.js"></script>
     <link rel="stylesheet" media="screen,print" href="/static/css/pure-atomic-77a89317e0b3c7426a296e339669c6c39e4a4a0901a767f996be54c4d22759ff.css">
 
     <style>
