--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -75,7 +75,7 @@
                             <div class="container-fluid" style="padding: 0px;">
                                 <div class="row" style="margin: 0px ;padding:15px 0;">
                                     <!-- 头像 -->
-                                    <div class="col-md-2" style="padding:0 15px 0 0;width:95px;"><img style="width:80px"  class="img-circle" :src="'/main/propic/'+item.author_id"/></div>
+                                    <div class="col-md-2" style="padding:0 15px 0 0;width:95px;"><img style="width:80px"  class="img-circle" :src="'/main/propic/'+item.id"/></div>
                                     <!-- 姓名+简介 -->
                                     <div class="col-md-8" style="padding: 0;">
                                         <h2 class="my-title2" style="padding: 0">${item.name}</h2>
