--- a/eds/templates/search/searchreasult3.html
+++ b/eds/templates/search/searchreasult3.html
@@ -190,7 +190,7 @@
               <li  v-for="item in results" class="flex items-start w100p py3 border-bottom border-grey-500 search_li">
                 <div class="flex items-center justify-between w100p">
                   <a :href="item.link" class="ml3 link-soft-black basis20p basis40p-md basis20p-lg block">
-                    <img class="w100p block img-circle"style="width:110px"  :src="'/main/propic/'+item.author_id" alt="Project"></a>
+                    <img class="w100p block img-circle"style="width:110px"  :src="'/main/propic/'+item.id" alt="Project"></a>
                   <div class="basis60p-md basis80p basis80p-lg">
                     <div class="type-16 dark-grey-400 display-none block-md percent-funded"><strong><a  :href="item.link">${item.name}</a></strong></div>
                     <div class="type-16 dark-grey-400 display-none block-md percent-funded"><a :href="'/main/school/'+item.school">${item.school}</a></div>
