--- a/eds/static/css/expertstyle.css
+++ b/eds/static/css/expertstyle.css
@@ -96,7 +96,7 @@
     left: 0;
 }
 
-#myTabContent{
+.myTabContent{
   width: fit-content;
   width: -webkit-fit-content;
   margin-right: auto;
@@ -105,26 +105,27 @@
 }
 
 
-#myTabContent h3 {
+.myTabContent h3 {
     font-size: 2.1rem;
     margin-bottom: 3rem;
     font-weight: 400;
     line-height: 30px;
 }
 
-#myTabContent span,strong {
+.myTabContent span,strong {
     font-size: 1.6rem;
     line-height: 3rem;
     margin-bottom: 1rem;
 }
 
 
-#myTabContent p {
+.myTabContent p {
     font-size: 1.6rem;
     line-height: 3rem;
     margin-bottom: 1rem;
-    text-indent:2em;
-    padding-left:40px;
+    text-indent:0em;
+    padding-left:0px;
+    margin:0;
 }
 
 .my-tab-ul{
