--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -71,7 +71,7 @@
 
                     <ul class="my-ul">
                         <li class="my-li" v-for="item in results">
-                            <a :href="item.link" >
+                            <a :href="'/main/expert/'+item.id" >
                             <div class="container-fluid" style="padding: 0px;">
                                 <div class="row" style="margin: 0px ;padding:15px 0;">
                                     <!-- 头像 -->
