--- a/eds/templates/search/search_result4.html
+++ b/eds/templates/search/search_result4.html
@@ -138,7 +138,7 @@
 {% endblock %}
 
 {% block main %}
-<script src="/static/js/test.js"></script>
+<script src="/static/js/search/search_more.js"></script>
 <body>
     <div class="search-container">
         <ul>
@@ -166,8 +166,8 @@
                 </div>
                 <hr>
                 <div>
-                    <p style="padding-left:100px">计算机科学与技术系</p>
-                    <ul style="padding-left:150px">
+                    <p style="padding-left:50px">计算机科学与技术系</p>
+                    <ul style="padding-left:85px">
                         <li>一级学科国家重点学科：计算机科学与技术</li>
                         <li>国家重点实验室：智能技术与系统国家重点实验室</li>
                         <li>院士5人，长江学者7人，千人计划2人，万人计划1人，杰出青年11人</li>
@@ -194,15 +194,41 @@
                                 </ul>
                             </div>
                         </div>
-                        <button class="search-toggle">点击1</button>
+                        <button class="search-toggle">更多信息</button>
                         <div class="search-hidden-content" hidden>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
+                            <ul class="search-more">
+                                <li>
+                                    <div style="display:inline-block;width:900px;"><i class="glyphicon glyphicon-chevron-right"></i>教育经历</div>
+                                    <ul class="search-text">
+                                        <li>大学本科(电子工程)，清华大学，1977</li>
+                                        <li>工学硕士(计算机系统结构)，清华大学，1982</li>
+                                        <li>工学博士(计算机系统结构)，清华大学，1997</li>
+                                    </ul>
+                                </li>
+                                <li >
+                                    <div style="display:inline-block;width:900px;"><i class="glyphicon glyphicon-chevron-right">工作经历</i></div>
+                                    <ul class="search-text">
+                                        <li>清华大学信息化工作领导小组: 副组长、办公室主任 (2010-)；</li>
+                                        <li>清华大学信息网络工程研究中心: 主任 (1994-)；</li>
+                                    </ul>
+                                </li>
+                                <li >
+                                    <div style="display:inline-block;width:900px;"><i class="glyphicon glyphicon-chevron-right">项目经历</i></div>
+                                    <ul class="search-text">
+                                        <li>主持研制中国教育和科研计算机网CERNET示范工程</li>
+                                        <li>长期研究计算机网络路由和交换核心技术</li>
+                                    </ul>
+                                </li>
+                                <li >
+                                    <div style="display:inline-block;width:900px;"><i class="glyphicon glyphicon-chevron-right">获奖经历</i></div>
+                                    <ul class="search-text">
+                                        <li>国家科技进步二等奖—— CNGI示范网络核心CNGI-CERNET/6IX (2007)</li>
+                                        <li>国家科技进步二等奖——IPv6核心路由器 (2005)</li>
+                                        <li>国家科技进步二等奖——中国教育计算机科研CERNET网示范工程 (1997)</li>
+                                        <li>国家科技进步三等奖——北京交易所计算机交易系统 (1997)</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li>
@@ -224,15 +250,10 @@
                             </div>
                         </div>
 
-                        <button class="search-toggle">点击2</button>
+                        <button class="search-toggle">更多信息</button>
                         <div class="search-hidden-content" hidden>
                             KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
+
                         </div>
                     </li>
                     <li>
@@ -253,15 +274,10 @@
                                 </ul>
                             </div>
                         </div>
-                        <button class="search-toggle">点击3</button>
+                        <button class="search-toggle">更多信息</button>
                         <div class="search-hidden-content" hidden>
                             KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
-                            KKK<br>
+
                         </div>
                     </li>
                 </ul>
