--- a/eds/static/css/search/style_more.css
+++ b/eds/static/css/search/style_more.css
@@ -8,6 +8,10 @@ i{
     up:2px;
 }
 
+body{
+    background-color: #f3f3f3;
+}
+
 ul li{
     padding: 1px 5px!important;
     font-size: 15px;
@@ -17,6 +21,7 @@ ul li{
     width:900px;
     margin-left: auto;
     margin-right: auto;
+    background-color: #fff;
 }
 
 .search-head{
