--- a/eds/templates/search/search_result4.html
+++ b/eds/templates/search/search_result4.html
@@ -137,6 +137,9 @@
 <script src="/static/js/search/search_more.js"></script>
 <body>
     <div class="search-container">
+        <div style="border-bottom:solid 1px transparent;border-color: #888888;">
+            <P style="font-size:18px;padding-top:25px;padding-left:25px;margin-bottom:25px">根据关键词 <b>数据挖掘</b> 为您找到 <b>9</b> 名专家</P>
+        </div>
         <ul>
             {% for item in result %}
                 <li class="search-li">
