--- a/eds/templates/search/search_result4.html
+++ b/eds/templates/search/search_result4.html
@@ -138,7 +138,8 @@
 <body>
     <div class="search-container">
         <div style="border-bottom:solid 1px transparent;border-color: #888888;">
-            <P style="font-size:18px;padding-top:25px;padding-left:25px;margin-bottom:25px">根据关键词&nbsp;<b>数据挖掘</b>，为您推荐&nbsp;<b>9</b>&nbsp;名专家</P>
+
+            <P style="font-size:18px;padding-top:25px;padding-left:25px;margin-bottom:25px">根据关键词&nbsp;<b id="keyword">关键词</b>，为您推荐&nbsp;<b id="person_count">0</b>&nbsp;名专家</P>
         </div>
         <ul>
             {% for item in result %}
