--- a/eds/templates/search/search_result4.html
+++ b/eds/templates/search/search_result4.html
@@ -157,7 +157,7 @@
                         </ul>
                         <ul class="search-pill">
                            <li>{{item['school']["important"][0]}}个一级学科国家重点学科</li>
-                           <li>{{item['school']["important"][1]}}个一级学科国家重点学科</li>
+                           <li>{{item['school']["important"][1]}}个二级学科国家重点学科</li>
                            <li>{{item['school']["main_lab"]['num']}}个国家重点实验室</li>
                         </ul>
                     </div>
